helmcharts/Geoserver/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: geoserver
  namespace: urbi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geoserver
  template:
    metadata:
      labels:
        app: geoserver
    spec:
      containers:
      - name: geoserver
        image: docker.osgeo.org/geoserver:2.25.2
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: geoserver-data
          #mountPath: /opt/geoserver/data_dir
          mountPath: /opt/geoserver_data
      volumes:
      - name: geoserver-data
        persistentVolumeClaim:
          claimName: geoserver-pvc
